--- a/MapMaker/MapMaker/Base.lproj/Main.storyboard
+++ b/MapMaker/MapMaker/Base.lproj/Main.storyboard
@@ -121,6 +121,51 @@
             </objects>
             <point key="canvasLocation" x="3054" y="64"/>
         </scene>
+        <!--Selected RegionVC-->
+        <scene sceneID="dj9-uo-0H4">
+            <objects>
+                <viewController storyboardIdentifier="SPECIAL" id="VzX-Y6-azt" customClass="SelectedRegionVC" customModule="MapMaker" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="g7Z-Xq-Xmf"/>
+                        <viewControllerLayoutGuide type="bottom" id="Vfi-jg-j7s"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nvW-Z1-tPR">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WMp-3w-gCF">
+                                <rect key="frame" x="36" y="40" width="528" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="kpc-mc-OI4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="3vY-E7-YqE">
+                                <rect key="frame" x="0.0" y="300" width="600" height="300"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.28243346759999999" green="0.72308084240000003" blue="0.26780771939999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="WMp-3w-gCF" secondAttribute="trailing" constant="20" id="CC7-4N-f9L"/>
+                            <constraint firstAttribute="trailing" secondItem="3vY-E7-YqE" secondAttribute="trailing" id="Cbn-tn-ABT"/>
+                            <constraint firstAttribute="bottom" secondItem="3vY-E7-YqE" secondAttribute="bottom" id="Yde-1x-pjy"/>
+                            <constraint firstItem="3vY-E7-YqE" firstAttribute="height" secondItem="nvW-Z1-tPR" secondAttribute="height" multiplier="0.5" id="hB8-Bm-tZq"/>
+                            <constraint firstItem="WMp-3w-gCF" firstAttribute="top" secondItem="g7Z-Xq-Xmf" secondAttribute="bottom" constant="20" id="ouj-bD-veV"/>
+                            <constraint firstItem="WMp-3w-gCF" firstAttribute="leading" secondItem="nvW-Z1-tPR" secondAttribute="leadingMargin" constant="20" id="pAC-0v-kUX"/>
+                            <constraint firstItem="3vY-E7-YqE" firstAttribute="leading" secondItem="nvW-Z1-tPR" secondAttribute="leading" id="wFK-ql-wyV"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="map" destination="3vY-E7-YqE" id="6fI-J5-g1y"/>
+                        <outlet property="regionNameLabel" destination="WMp-3w-gCF" id="0gV-rE-rlV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NFX-aF-EjD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2242" y="726"/>
+        </scene>
         <!--Map-->
         <scene sceneID="7Fi-AU-P7F">
             <objects>
