Create first network call. Set up Question class. Display results in tableview

--- a/StackOverFlowed/StackOverFlowed/Base.lproj/Main.storyboard
+++ b/StackOverFlowed/StackOverFlowed/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
         <!--View Controller-->
         <scene sceneID="D9o-Oq-aaA">
             <objects>
-                <viewController id="4iQ-RF-8Yt" sceneMemberID="viewController">
+                <viewController id="4iQ-RF-8Yt" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="q9q-FD-Lld"/>
                         <viewControllerLayoutGuide type="bottom" id="9Bc-ca-vPl"/>
@@ -63,8 +63,32 @@
                     <view key="view" contentMode="scaleToFill" id="GUT-3b-WT2">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="fIs-Wn-hlZ">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CELL" id="WTN-mn-nu9">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WTN-mn-nu9" id="MG6-IE-fbM">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="0.22515914710000001" green="0.99134206830000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="fIs-Wn-hlZ" firstAttribute="leading" secondItem="GUT-3b-WT2" secondAttribute="leading" id="0FD-xP-IrV"/>
+                            <constraint firstItem="9Bc-ca-vPl" firstAttribute="top" secondItem="fIs-Wn-hlZ" secondAttribute="bottom" id="Bbg-Mw-Q9T"/>
+                            <constraint firstAttribute="trailing" secondItem="fIs-Wn-hlZ" secondAttribute="trailing" id="jhw-fS-lpP"/>
+                            <constraint firstItem="fIs-Wn-hlZ" firstAttribute="top" secondItem="GUT-3b-WT2" secondAttribute="top" id="jiw-rQ-4lp"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="fIs-Wn-hlZ" id="3bT-hb-FUP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XpI-wq-aqh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
