Add webview to start OAuth request. Add login button on RootVC.

--- a/StackOverFlowed/StackOverFlowed/Base.lproj/Main.storyboard
+++ b/StackOverFlowed/StackOverFlowed/Base.lproj/Main.storyboard
@@ -102,6 +102,24 @@
             </objects>
             <point key="canvasLocation" x="2064" y="-668"/>
         </scene>
+        <!--WebVC-->
+        <scene sceneID="ORh-Gp-McM">
+            <objects>
+                <viewController storyboardIdentifier="WEB_VC" id="VxU-EQ-mJa" customClass="WebVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KFL-cr-GqB"/>
+                        <viewControllerLayoutGuide type="bottom" id="d55-8O-yO8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bga-ny-CuN">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="o9X-Kc-c7X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2754" y="-668"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="s8f-mE-2B2">
             <objects>
