Add container view to enable Master view to be shown first.

--- a/GithubbaHubba/GithubbaHubba/Base.lproj/Main.storyboard
+++ b/GithubbaHubba/GithubbaHubba/Base.lproj/Main.storyboard
@@ -526,6 +526,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="h0K-Og-I28"/>
+        <segue reference="9dK-BR-iix"/>
     </inferredMetricsTieBreakers>
 </document>
