--- a/StackOverFlowed/StackOverFlowed/Base.lproj/Main.storyboard
+++ b/StackOverFlowed/StackOverFlowed/Base.lproj/Main.storyboard
@@ -91,7 +91,7 @@
         <!--Question Search-->
         <scene sceneID="D9o-Oq-aaA">
             <objects>
-                <viewController id="4iQ-RF-8Yt" customClass="QuestionSearch" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="4iQ-RF-8Yt" customClass="QuestionSearch" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="q9q-FD-Lld"/>
                         <viewControllerLayoutGuide type="bottom" id="9Bc-ca-vPl"/>
@@ -101,8 +101,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="fIs-Wn-hlZ">
-                                <rect key="frame" x="0.0" y="44" width="600" height="556"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="oGh-fD-sHJ">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CELL" id="WTN-mn-nu9">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -113,20 +118,13 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="oGh-fD-sHJ">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" red="0.22515914710000001" green="0.99134206830000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="fIs-Wn-hlZ" firstAttribute="leading" secondItem="GUT-3b-WT2" secondAttribute="leading" id="0FD-xP-IrV"/>
-                            <constraint firstAttribute="trailing" secondItem="oGh-fD-sHJ" secondAttribute="trailing" id="5fx-Fi-fUf"/>
-                            <constraint firstItem="9Bc-ca-vPl" firstAttribute="top" secondItem="fIs-Wn-hlZ" secondAttribute="bottom" id="Bbg-Mw-Q9T"/>
-                            <constraint firstItem="oGh-fD-sHJ" firstAttribute="leading" secondItem="GUT-3b-WT2" secondAttribute="leading" id="KwP-KZ-5og"/>
-                            <constraint firstItem="fIs-Wn-hlZ" firstAttribute="top" secondItem="oGh-fD-sHJ" secondAttribute="bottom" id="PVr-EL-ndE"/>
-                            <constraint firstItem="oGh-fD-sHJ" firstAttribute="top" secondItem="q9q-FD-Lld" secondAttribute="bottom" id="ca7-ju-AAB"/>
-                            <constraint firstAttribute="trailing" secondItem="fIs-Wn-hlZ" secondAttribute="trailing" id="jhw-fS-lpP"/>
+                            <constraint firstItem="fIs-Wn-hlZ" firstAttribute="top" secondItem="q9q-FD-Lld" secondAttribute="bottom" id="71g-ig-zFi"/>
+                            <constraint firstAttribute="trailing" secondItem="fIs-Wn-hlZ" secondAttribute="trailing" id="fnB-s2-MeR"/>
+                            <constraint firstItem="9Bc-ca-vPl" firstAttribute="top" secondItem="fIs-Wn-hlZ" secondAttribute="bottom" id="kyg-By-HVj"/>
+                            <constraint firstItem="fIs-Wn-hlZ" firstAttribute="leading" secondItem="GUT-3b-WT2" secondAttribute="leading" id="nQa-99-C51"/>
                         </constraints>
                     </view>
                     <connections>
